[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dstaf"
version = "0.0.2"
authors = [
    {name="Dasha Sierra", email="pypi@dashasierra.com"},
]
description = "Dasha Sierra Text Application Framework"
readme = "README.md"
requires-python = ">= 3.9"
classifiers = [
    'Development Status :: 2 - Pre-Alpha',
    'Environment :: Console',
    'Intended Audience :: Developers',
    'Topic :: Text Processing :: General',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: Implementation :: CPython',
    'Topic :: Software Development :: User Interfaces',
    'Topic :: Terminals',
]
license = "MIT"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/dashasierra/dstaf"
Issues = "https://github.com/dashasierra/dstaf/issues"

[project.optional-dependencies]
# Code Quality Controls
test = [
    "bandit",
    "black",
    "isort",
    "pytest",
    "pylint",
    ]
# Release Management
cicd = [
    "build",
    "cryptography",
    "PyJWT",
    "requests",
]
